MediaSource.prototype.onsourceclosed event handler attribute typo (trailing d)
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox87 | --- | fixed |
People
(Reporter: foolip, Assigned: jbauman)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Bug 1689222 - MediaSource.prototype.onsourceclosed event handler attribute typo (trailing d). r=alwu
48 bytes,
text/x-phabricator-request
|
Details | Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 11_1_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.96 Safari/537.36
Steps to reproduce:
Evaluate new MediaSource().onsourceclose
and new MediaSource().onsourceclosed
. Or try using the onsourceclose (sans d) event handler attribute to handle the "sourceclose" event.
Actual results:
The supported event handler is "onsourceclosed" with an extra "d". However, the event that is actually fired doesn't have the extra "d", so this event handler attribute doesn't do anything:
https://github.com/mozilla/gecko-dev/blob/b9384b091e901b3283ce24b6610e80699d79fd06/dom/media/mediasource/MediaSource.cpp#L536
Expected results:
It needs to be renamed to drop the trailing "d"
Reporter | ||
Comment 1•5 years ago
|
||
There's a Firefox-only failure for this in WPT:
https://wpt.fyi/results/media-source/idlharness.window.html?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned
Reporter | ||
Comment 2•5 years ago
|
||
And here's the line in your Web IDL that needs updating: https://github.com/mozilla/gecko-dev/blob/b9384b091e901b3283ce24b6610e80699d79fd06/dom/webidl/MediaSource.webidl#L37
Comment 3•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Updated•5 years ago
|
Assignee | ||
Comment 4•5 years ago
|
||
I can see the failure in http://wpt.live/media-source/idlharness.window.html. Looks like it should be relatively straightforward to fix. Thanks for the report!
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 5•5 years ago
|
||
Comment 7•5 years ago
|
||
bugherder |
Description
•