Bug 1689222 - MediaSource.prototype.onsourceclosed event handler attribute typo (trailing d). r=alwu,webidl,smaug

Differential Revision: https://phabricator.services.mozilla.com/D103560